--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@n8tb1t/use-scroll-position": "^2.0.3",
+    "@popmotion/popcorn": "^0.4.4",
     "animejs": "^3.2.1",
     "babel-plugin-styled-components": "^1.11.1",
     "dotenv": "^8.2.0",
@@ -54,6 +55,7 @@
     "react-icons": "^4.1.0",
     "react-intersection-observer": "^8.31.0",
     "react-masonry-component": "^6.2.1",
+    "react-scroll-parallax": "^2.3.5",
     "react-spring": "^8.0.27",
     "react-stonecutter": "^0.3.10",
     "react-switch": "^6.0.0",
