--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -48,6 +48,7 @@
     "netlify-cli": "^2.62.0",
     "netlify-lambda": "^2.0.1",
     "normalize.css": "^8.0.1",
+    "popmotion": "^9.1.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
