--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -26,6 +26,7 @@
     "@n8tb1t/use-scroll-position": "^2.0.3",
     "babel-plugin-styled-components": "^1.11.1",
     "dotenv": "^8.2.0",
+    "formik": "^2.2.6",
     "framer-motion": "^2.0.0-beta.42",
     "gatsby": "^2.24.63",
     "gatsby-image": "^2.4.17",
