--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -47,6 +47,7 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^4.1.0",
     "react-intersection-observer": "^8.31.0",
+    "react-responsive-carousel": "^3.2.11",
     "react-switch": "^6.0.0",
     "react-use": "^15.3.8",
     "styled-components": "^5.2.0"
